# flutter-maplibre-gl

./: .gitignore  NATIVE_LERC_INTEGRATION.md
.github/instructions/: copilot-instructions.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  tasks.json
documentation/: altitude_based_terrain_coloring.md  altitude_bucketing.md  api_documentation.md  basic_lerc_decoding.md  basic_terrain_display_ui_controls.md  cmake_configuration.md  cpp_wrapper_implementation.md  custom_terrain_data_sources.md  dart_ffi_bindings.md  dart_ffi_integration.md  enhanced_visualization_ui_controls.md  flutter_map_terrain_layer.md  flutter_map_tile_provider.md  hillshading_support.md  lerc_data_caching.md  lerc_implementation_guide.md  lerc_integration.md  lerc_source_directory.md  memory_management.md  multiple_terrain_rendering_modes.md  multithreaded_decoding.md  offline_terrain_data.md  performance_optimization_techniques.md  platform_specific_implementation.md  project_structure.md  raw_elevation_data_processing.md  reference_altitude_and_warning_levels.md  terrain_visualization_techniques.md  throttling_and_debouncing.md
maplibre_gl/android/: build.gradle
maplibre_gl/android/src/main/cpp/: CMakeLists.txt  lerc_jni_bridge.cpp  lerc_wrapper.cpp  lerc_wrapper.h
maplibre_gl/android/src/main/cpp/lerc-master/: CMakeLists.txt
maplibre_gl/android/src/main/cpp/lerc-master/build-android/arm64-v8a/: CMakeCache.txt
maplibre_gl/android/src/main/cpp/lerc-master/build-android/armeabi-v7a/: CMakeCache.txt  Makefile
maplibre_gl/android/src/main/cpp/lerc-master/build-android/x86_64/: CMakeCache.txt  Lerc.pc  cmake_install.cmake
maplibre_gl/android/src/main/cpp/lerc-master/src/: lerc_wrapper.h
maplibre_gl/android/src/main/cpp/lerc-master/src/LercLib/: Lerc_c_api_impl.h
maplibre_gl/ios/: maplibre_gl.podspec
maplibre_gl/lib/: maplibre_gl.dart
maplibre_gl/lib/src/: controller.dart  lerc_decoder.dart  terrain_layer.dart
maplibre_gl_example/: pubspec.yaml
maplibre_gl_example/android/app/: build.gradle
maplibre_gl_example/android/app/src/main/cpp/: CMakeLists.txt  lerc_jni_bridge.cpp
maplibre_gl_example/ios/: Podfile
maplibre_gl_example/ios/LercWrapper/: LercWrapper.podspec
maplibre_gl_example/ios/Runner/: AppDelegate.swift  Runner-Bridging-Header.h
maplibre_gl_example/ios/Runner/lerc_wrapper/: LercDecoder.h  LercDecoder.m  LercDecoderPlugin.h  LercDecoderPlugin.m
maplibre_gl_example/lib/: main.dart  stratux_traffic.dart
maplibre_gl_example/macos/Runner.xcodeproj/: project.pbxproj
maplibre_gl_example/src/lerc_wrapper/: CMakeLists.txt  INTEGRATION.md  lerc_wrapper.cpp  lerc_wrapper.h
maplibre_gl_platform_interface/lib/src/: maplibre_gl_platform_interface.dart  method_channel_maplibre_gl.dart  source_properties.dart
maplibre_gl_web/lib/: maplibre_gl_web.dart
maplibre_gl_web/lib/src/: convert.dart  maplibre_map_plugin.dart  maplibre_web_gl_platform.dart  options_sink.dart
(+18 files in other folders)
